@@ -1,5 +1,11 @@
 2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-pass.c (pkl_call_node_handlers): Do not continue
+	applying handlers to rewritten nodes, unless the rewritten node is
+	explicitly restarted by the phase handler that created it.
+
+2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-pass.h: NOte that changing PKL_PASS_NODE is
 	possible, but only in post-order handlers.
 	* libpoke/pkl-pass.c (pkl_do_pass_1): Add assertion to make sure
